--- a/src/app/Components/form/form.module.css
+++ b/src/app/Components/form/form.module.css
@@ -1,9 +1,13 @@
 .form_container {
   width: 80vw;
   height: 100%;
+
+  /* Animação de borda */
   background: linear-gradient(#27272a, #27272a) padding-box,
-    linear-gradient(120deg, transparent 0%, #10b981, #10b981) border-box;
+    linear-gradient(100deg, transparent 20%, #10b981, #a3e635) border-box;
   border: 2px solid transparent;
+  animation: gradientMove 3s infinite linear;
+  background-size: 200% 200%;
 
   transition: 1s ease-in-out;
   clip-path: polygon(
@@ -129,5 +133,17 @@
     height: 80vw;
     min-height: 30vh;
     padding: 1.5rem;
+  }
+}
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
