--- a/src/app/pages/contact/page.module.css
+++ b/src/app/pages/contact/page.module.css
@@ -2,7 +2,7 @@
   /* Background */
   /* Basic dimensions and centering */
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,12 +31,5 @@
   }
   100% {
     background-position: 40px 40px;
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    width: 100%;
-    height: 100%;
   }
 }
