--- a/src/app/pages/projects/page.module.css
+++ b/src/app/pages/projects/page.module.css
@@ -1,8 +1,11 @@
 .container {
   /* Background */
   /* Basic dimensions and centering */
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,12 +34,5 @@
   }
   100% {
     background-position: 40px 40px;
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-    width: 100%;
-    height: 100%;
   }
 }
