--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -1,14 +1,12 @@
 .container {
-  /* Background */
-  /* Basic dimensions and centering */
   width: 100%;
   height: 100ch;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  /* Dark mode colors and gradient */
-  background: #121212; /* Fallback for browsers that don't support gradients */
+  
+  background: #121212; 
   background: linear-gradient(
     135deg,
     #121212 25%,
@@ -22,7 +20,9 @@
   background-size: 40px 40px;
 
   /* Animation */
-  animation: move 4s linear infinite;
+  animation: move 2s linear infinite;
+
+  color: #fff;
 }
 
 @keyframes move {
