--- a/src/app/Components/loading-text/loader.module.css
+++ b/src/app/Components/loading-text/loader.module.css
@@ -1,36 +1,65 @@
 .loader {
-    position: relative;
-    overflow: hidden;
-    border-right: 3px solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start; /* Alinha o texto à esquerda */
+  /* height: 100vh; */
+  text-align: left; /* Alinha o texto à esquerda */
+}
+
+.loader_text {
+  font-size: 40px;
+  font-weight: 700;
+  background: linear-gradient(to right, #159957, #155799);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.cursor {
+  border-right: 3px solid;
+  animation: blink 0.5s steps(10) infinite;
+}
+
+.loader_text:nth-child(1) {
+  animation: typewriter1 0.5s steps(5) 0.7s 1 normal both,
+    blink 0.5s steps(10) 1s 4;
+}
+
+.loader_text:nth-child(2) {
+  animation: typewriter2 2.5s steps(30) 4s 1 normal both,
+    blink 0.5s steps(10) 8s infinite;
+}
+
+.hidden {
+  border-right: none;
+  animation: none;
+}
+
+@keyframes typewriter1 {
+  0% {
     width: 0px;
-    animation: typewriter 2s steps(10)  infinite alternate , blink 0.5s steps(10) infinite;
   }
-
-  .loader-text {
-    font-size: 40px;
-    font-weight: 700;
-    background: linear-gradient(to right,#159957, #155799);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  100% {
+    width: 60px; /* Ajuste o tamanho conforme necessário */
   }
+}
 
-  @keyframes typewriter {
-    0% {
-      width: 0px;
-    }
-
-    100% {
-      width: 240px;
-    }
+@keyframes typewriter2 {
+  0% {
+    width: 0px;
   }
+  100% {
+    width: 420px; /* Ajuste o tamanho conforme necessário para caber "I'm Fernando Amorim" */
+  }
+}
 
-  @keyframes blink {
-    0% {
-      border-right-color: rgba(255,255,255,.75);
-      ;
-    }
-
-    100% {
-      border-right-color: transparent;
-    }
-  }`
+@keyframes blink {
+  0% {
+    border-right-color: rgba(255, 255, 255, 0.75);
+  }
+  100% {
+    border-right-color: transparent;
+  }
+}
