--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -1,12 +1,13 @@
 .container {
   width: 100%;
-  height: 100ch;
+  height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 
-  
-  background: #121212; 
+  background: #121212;
   background: linear-gradient(
     135deg,
     #121212 25%,
