--- a/src/app/pages/techs/page.module.css
+++ b/src/app/pages/techs/page.module.css
@@ -2,8 +2,7 @@
   /* Background */
   /* Basic dimensions and centering */
   max-width: 100%;
-  width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
   padding-left: 1rem;
   padding-right: 1rem;
@@ -11,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   /* Dark mode colors and gradient */
   background: #121212; /* Fallback for browsers that don't support gradients */
@@ -36,5 +36,26 @@
   }
   100% {
     background-position: 40px 40px;
+  }
+}
+
+@media (min-width: 640px) and (min-height: 480px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) and (min-height: 600px) {
+  .container {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 1024px) and (min-height: 768px) {
+  .container {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
