--- a/src/app/Components/form/form.module.css
+++ b/src/app/Components/form/form.module.css
@@ -9,7 +9,7 @@
   animation: gradientMove 3s infinite linear;
   background-size: 200% 200%;
 
-  transition: 1s ease-in-out;
+  transition: 0.2s ease-in-out;
   clip-path: polygon(
     30px 0%,
     100% 0,
@@ -119,10 +119,18 @@
 /* Responsividade para telas maiores */
 @media screen and (min-width: 1200px) {
   .form_container {
-    max-width: 1000px;
+    width: 90vw;
   }
   .form_container .form_group textarea {
-    max-height: 60vh;
+    height: 60vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  .form_container {
+    width: 90vw;
+  }
+  .form_container .form_group textarea {
+    height: 50vh;
   }
 }
 
